--- a/src/main/resources/templates/doctor.html
+++ b/src/main/resources/templates/doctor.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Doctor Secret Room</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>Header TODO</header>
-<section>
-    <h1>Welcome $doctorname</h1>
-    <h3>Your number is $doctornumber</h3>
-</section>
-<footer>Footer TODO</footer>
+    <header th:replace="header.html :: top">
+        Header
+    </header>
+    <section>
+        <h1 th:text="|Welcome ${name}|">Welcome $doctorname</h1>
+        <h3 th:text="|Your number is ${number}|">Your number is $doctornumber</h3>
+    </section>
+    <footer th:replace="fragments/footer.html :: footer">
+        Footer
+    </footer>
 </body>
 </html>
